make selected text visible in FF (and maybe fix IE bug - needs testing)

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,7 +1,8 @@
 /* Footer. */
 footer {
-    display: block;
+    max-width: 900px;
     width: var(--main-text-width-wide);
+    max-width: 80%;
     max-width: 80vw;
     
     margin-left: auto;
